<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GZ Track</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_time_manager">TimeManager</string>
    <string name="title_activity_tabs_manager">TabsManager</string>
    <string name="title_activity_stand_ups_dialog">StandUpsDialog</string>
    <string name="title_activity_time_stamp_query_dialog">TimeStampQueryDialog</string>
    <string name="title_activity_view_stand_up_dialog">ViewStandUpDialog</string>
    <string name="loginactivity_login">login</string>
    <string name="loginactivity_register">register</string>
    
    <string name="login_gzlogo_description">GZ logo</string>
    <string name="login_poweredby_description">Global Zeal</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_register_text">Register?</string>
    <string name="btn_login_text">Login</string>
    
    <string name="register_firstname_text">First Name</string>
    <string name="register_lastname_text">First Name</string>
    <string name="register_email_text">Email address</string>
    <string name="register_password_text">Password     </string>
    <string name="register_confirmpassword_text">Confirm Password</string>
    <string name="register_registerbutton_text">Register</string>
    
    <string name="standups_didprevious_text">What were you working on previously?</string>
    <string name="standups_plans_text">What do you plan to work on today?</string>
    <string name="standups_problems_text">What problems did you encounter?</string>
    <string name="standups_button_text">Done</string>
    
    <string name="viewstandups_sample_date">June 30, 2014</string>
    <string name="viewstandups_sample_time">12:00:32 AM</string>
    <string name="viewstandups_previoustask_heading">Previous task</string>
    <string name="viewstandups_heading_currenttask">Current task</string>
    <string name="viewstandups_heading_problemsencountered">Problems Encountered</string>
    <string name="viewstandups_sample_text">The quick brown fox jump over the lazy dog. This is a sample text</string>

    <string name="fragment_home_sample_name">Bruce Wayne</string>
    <string name="fragment_home_sample_time">03:16</string>
    <string name="fragment_home_sample_AMPM_time">AM</string>
    <string name="fragment_home_sample_date">Friday, February 17, 2014</string>
    <string name="fragment_home_button_description">Log Button</string>
    
    <string name="history_list_item_sample_date">February 17, 2014</string>
    <string name="history_list_item_sample_time">03:16 PM \- 06:16 PM</string>
    <string name="history_list_item_sample_location">Sesame Street</string>
    <string name="history_list_item_sample_workhours">3 hours</string>
    
</resources>