<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_fragment_home_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_home_sample_name"
        android:textColor="#FFFFFF"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/tv_fragment_home_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fragment_home_username"
        android:text="@string/fragment_home_sample_date"
        android:textColor="#FFFFFF"
        android:textSize="23sp" />

    <TextView
        android:id="@+id/tv_fragment_home_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fragment_home_date"
        android:text="@string/fragment_home_sample_time"
        android:textColor="#FFFFFF"
        android:textSize="50sp" />

    <ImageView
        android:id="@+id/iv_fragment_home_timeintimeout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_fragment_home_time"
        android:contentDescription="@string/fragment_home_button_description" />

</RelativeLayout>