<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="48dp" >

    <TextView
        android:id="@+id/history_list_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/history_list_item_sample_date"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/history_list_item_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_list_item_date"
        android:text="@string/history_list_item_sample_time"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/history_list_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_list_item_time"
        android:text="@string/history_list_item_sample_location" />

    <TextView
        android:id="@+id/history_list_item_workhours"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:text="@string/history_list_item_sample_workhours"
        android:gravity="center"
        android:padding="8dp"
        android:background="#000000"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</RelativeLayout>