<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_gzlogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_spacing"
        android:contentDescription="@string/login_gzlogo_description"
        android:src="@drawable/gz" />

    <EditText
        android:id="@+id/et_usernameEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_gzlogo"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:textSize="16sp" >
    </EditText>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_usernameEmail"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:onClick="buttonClicked"
        android:text="@string/login_register_text"
        android:textColor="#000000"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/et_password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_toEndOf="@id/tv_registerBtn"
        android:layout_toRightOf="@id/tv_registerBtn"
        android:onClick="buttonClicked"
        android:text="@string/btn_login_text"
        android:textColor="#000000"
        android:textSize="16sp" />

    <ImageView
        android:id="@+id/iv_poweredby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_registerBtn"
        android:layout_margin="@dimen/layout_margin"
        android:contentDescription="@string/login_poweredby_description"
        android:src="@drawable/powered" />

</RelativeLayout>