<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tv_standupPrevious"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_spacing"
        android:text="@string/standups_didprevious_text"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/et_standupPrevious"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_standupPrevious"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:inputType="textMultiLine|textNoSuggestions"
        android:lines="@integer/standups_edittext_max_lines"
        android:scrollbars="vertical" >
    </EditText>

    <TextView
        android:id="@+id/tv_standupTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_standupPrevious"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:text="@string/standups_plans_text"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/et_standupTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_standupTodo"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:gravity="top|start"
        android:inputType="textMultiLine|textNoSuggestions"
        android:lines="@integer/standups_edittext_max_lines"
        android:scrollbars="vertical" />

    <TextView
        android:id="@+id/tv_standupProblem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_standupTodo"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:text="@string/standups_problems_text"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/et_standupProblem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_standupProblem"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:gravity="top|start"
        android:inputType="textMultiLine|textNoSuggestions"
        android:lines="@integer/standups_edittext_max_lines"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btn_record_standup"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/et_standupProblem"
        android:layout_marginBottom="@dimen/layout_spacing"
        android:layout_marginLeft="@dimen/layout_spacing"
        android:layout_marginRight="@dimen/layout_spacing"
        android:background="@drawable/loginbuttonstyle"
        android:text="@string/standups_button_text"
        android:textColor="#ffffff"
        android:textSize="16sp" />

</RelativeLayout>